--- a/css/style.css
+++ b/css/style.css
@@ -2,48 +2,50 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- }
- 
- .wrap {
+}
+
+.wrap {
   width: 80%;
   margin: 5vh auto 0;
-  font-family: 'open sans', roboto, sans-serif; 
- }
- 
- 
- 
- h1 {
+  font-family: 'open sans', roboto, sans-serif;
+}
+
+h1 {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 30px;
- }
- .game {
+}
+
+.game {
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 3vh;
- 
- }
- .game div {
+}
+
+.game div {
   height: 30vh;
-  flex-grow: 1;
+  -ms-flex-positive: 1;
+      flex-grow: 1;
   margin: 10px;
- border: 3px solid gray;
- }
- 
- .play {
+  border: 3px solid gray;
+}
+
+.play {
   text-align: center;
- }
- 
- .play input{
+}
+
+.play input {
   height: 90px;
   font-size: 40px;
   padding: 20px;
   width: 400px;
   border: 3px solid black;
   text-align: center;
- }
- .play button {
+}
+
+.play button {
   width: 40%;
-  height:90px;
+  height: 90px;
   text-align: center;
   padding: 20px 60px;
   font-size: 40px;
@@ -53,38 +55,38 @@
   color: white;
   cursor: pointer;
   letter-spacing: 6px;
- }
- 
- .panel {
+}
+
+.panel {
   margin: 80px 0 40px;
   font-size: 26px;
- }
- 
- .panel, .score {
+}
+
+.panel, .score {
   font-size: 26px;
- }
- .panel span, .score span {
+}
+
+.panel span, .score span {
   font-weight: bold;
- }
- 
- @media (max-width: 1024px) {
+}
+
+@media (max-width: 1024px) {
   .wrap {
-  width: 90%;
+    width: 90%;
   }
-  .play input{
-   height: 70px;
-   font-size: 30px;
-   display: block;
-   margin: 20px auto;
- 
+  .play input {
+    height: 70px;
+    font-size: 30px;
+    display: block;
+    margin: 20px auto;
   }
   .play button {
-   height: 74px;
-   font-size: 30px;
-   display: block;
-   text-align: center;
-   margin: 0 auto;
-   padding: 0 20px ;
+    height: 74px;
+    font-size: 30px;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0 20px;
   }
- 
- }
+}
+/*# sourceMappingURL=style.css.map */
